@@ -19,6 +19,9 @@
 #pragma once
 #include "Command.h"
 
+class CCommitDlg;
+class CSVNProgressDlg;
+
 /**
  * \ingroup TortoiseProc
  * Shows the commit dialog, executes the commit and retries (if necessary)
@@ -27,6 +30,8 @@ class CommitCommand : public Command
 {
 private:
 	CString LoadLogMessage();
+    void InitProgressDialog (CCommitDlg& commitDlg, CSVNProgressDlg& progDlg);
+
 public:
 	/**
 	 * Executes the command.
